# wangle

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PATENTS  README.md  tutorial.md
wangle/: BUILD_MODE.bzl  CMakeLists.txt  defs.bzl
wangle/acceptor/: AcceptObserver.h  Acceptor.cpp  Acceptor.h  AcceptorHandshakeHelper.cpp  AcceptorHandshakeHelper.h  AcceptorHandshakeManager.cpp  AcceptorHandshakeManager.h  BUCK  CMakeLists.txt  ConnectionCounter.h  ConnectionManager.cpp  ConnectionManager.h  DomainNameMisc.h  EvbHandshakeHelper.cpp  EvbHandshakeHelper.h  FizzAcceptorHandshakeHelper.cpp  FizzAcceptorHandshakeHelper.h  FizzConfig.h  FizzConfigUtil.cpp  FizzConfigUtil.h  LoadShedConfiguration.cpp  LoadShedConfiguration.h  ManagedConnection.cpp  ManagedConnection.h  NetworkAddress.h  PeekingAcceptorHandshakeHelper.h  SSLAcceptorHandshakeHelper.cpp  SSLAcceptorHandshakeHelper.h  SSLContextSelectionMisc.h  SecureTransportType.cpp  SecureTransportType.h  SecurityProtocolContextManager.h  ServerSocketConfig.h  SharedSSLContextManager.h  SocketOptions.cpp  SocketOptions.h  SocketPeeker.h  TLSPlaintextHandshakeManager.cpp  TLSPlaintextHandshakeManager.h  TLSPlaintextPeekingCallback.cpp  (+4 more)
wangle/acceptor/test/: AcceptorHelperMocks.h  AcceptorTest.cpp  BUCK  ConnectionManagerTest.cpp  EvbHandshakeHelperTest.cpp  LoadShedConfigurationTest.cpp  PeekingAcceptorHandshakeHelperTest.cpp  SecurityProtocolContextManagerTest.cpp  SocketPeekerTest.cpp
wangle/bootstrap/: AcceptRoutingHandler-inl.h  AcceptRoutingHandler.h  AcceptRoutingHandlerTest.cpp  BUCK  BaseClientBootstrap.h  BootstrapTest.cpp  CMakeLists.txt  ClientBootstrap.h  Mocks.h  RoutingDataHandler-inl.h  RoutingDataHandler.cpp  RoutingDataHandler.h  ServerBootstrap-inl.h  ServerBootstrap.cpp  ServerBootstrap.h  ServerSocketFactory.h
wangle/bootstrap/test/: AcceptRoutingHandlerTest.cpp  BUCK  BootstrapTest.cpp  Mocks.h
wangle/channel/: AsyncSocketHandler.h  BUCK  CMakeLists.txt  EventBaseHandler.h  FileRegion.cpp  FileRegion.h  Handler.h  HandlerContext-inl.h  HandlerContext.h  OutputBufferingHandler.h  Pipeline-inl.h  Pipeline.cpp  Pipeline.h  StaticPipeline.h
wangle/channel/broadcast/: BUCK  BroadcastHandler-inl.h  BroadcastHandler.h  BroadcastPool-inl.h  BroadcastPool.h  ObservingHandler-inl.h  ObservingHandler.h  Subscriber.h
wangle/channel/test/: AsyncSocketHandlerTest.cpp  BUCK  FileRegionTest.cpp  MockHandler.h  MockPipeline.h  OutputBufferingHandlerTest.cpp  PipelineTest.cpp
wangle/client/persistence/: BUCK  CMakeLists.txt  FilePersistenceLayer.cpp  FilePersistenceLayer.h  FilePersistentCache-inl.h  FilePersistentCache.h  LRUInMemoryCache-inl.h  LRUInMemoryCache.h  LRUPersistentCache-inl.h  LRUPersistentCache.h  PersistentCache.h  PersistentCacheCommon.cpp  PersistentCacheCommon.h  SharedMutexCacheLockGuard.h
wangle/client/ssl/: BUCK  CMakeLists.txt  SSLSession.h  SSLSessionCacheData.cpp  SSLSessionCacheData.h  SSLSessionCacheUtils.cpp  SSLSessionCacheUtils.h  SSLSessionCallbacks.cpp  SSLSessionCallbacks.h  SSLSessionPersistentCache-inl.h  SSLSessionPersistentCache.cpp  SSLSessionPersistentCache.h  ThreadSafeSSLSessionCache.cpp  ThreadSafeSSLSessionCache.h
wangle/cmake/: CheckAtomic.cmake  FindDoubleConversion.cmake  FindFizz.cmake  FindFolly.cmake  FindGMock.cmake  FindGflags.cmake  FindGlog.cmake  FindLibdl.cmake  FindLibrt.cmake  FindSodium.cmake  WangleFunctions.cmake
wangle/codec/: BUCK  ByteToMessageCodec.cpp  ByteToMessageCodec.h  ByteToMessageDecoder.h  CMakeLists.txt  CodecTest.cpp  CodecTestUtils.h  FixedLengthFrameDecoder.h  LengthFieldBasedFrameDecoder.cpp  LengthFieldBasedFrameDecoder.h  LengthFieldPrepender.cpp  LengthFieldPrepender.h  LineBasedFrameDecoder.cpp  LineBasedFrameDecoder.h  MessageToByteEncoder.h  StringCodec.h
wangle/codec/test/: BUCK  CodecTest.cpp  CodecTestUtils.h
wangle/concurrent/: Async.h  BlockingMPMCQueue.h  BlockingQueue.h  BoundThreadFactory.h  CPUThreadPoolExecutor.cpp  CPUThreadPoolExecutor.h  Codel.cpp  Codel.h  FiberIOExecutor.h  FutureExecutor.h  GlobalExecutor.cpp  GlobalExecutor.h  IOExecutor.h  IOObjectCache.h  IOThreadPoolExecutor.cpp  IOThreadPoolExecutor.h  LifoSemMPMCQueue.h  NamedThreadFactory.h  PriorityLifoSemMPMCQueue.h  PriorityThreadFactory.h  SerialExecutor.cpp  SerialExecutor.h  ThreadFactory.h  ThreadPoolExecutor.cpp  ThreadPoolExecutor.h  ThreadedExecutor.cpp  ThreadedExecutor.h  UnboundedBlockingQueue.h
wangle/concurrent/test/: AsyncTest.cpp  CodelTest.cpp  FiberIOExecutorTest.cpp  GlobalExecutorTest.cpp  SerialExecutorTest.cpp  ThreadPoolExecutorTest.cpp  ThreadedExecutorTest.cpp  UnboundedBlockingQueueTest.cpp
wangle/deprecated/rx/: Dummy.cpp  Observable.h  Observer.h  Subject.h  Subscription.h  types.h
wangle/example/accept_steering/: BUCK  accept_steering_server.cpp
wangle/example/broadcast/: BUCK  BroadcastProxy.cpp
wangle/example/echo/: BUCK  EchoClient.cpp  EchoServer.cpp
wangle/example/file/: BUCK  FileServer.cpp
wangle/example/proxy/: BUCK  Proxy.cpp
wangle/example/rpc/: BUCK  ClientSerializeHandler.h  RpcClient.cpp  RpcServer.cpp  SerializeHandler.h  (+1 more)
wangle/portability/: Filesystem.h
wangle/rx/: Dummy.cpp  Observable.h  Observer.h  Subject.h  Subscription.h
wangle/service/: BUCK  CMakeLists.txt  ClientDispatcher.h  CloseOnReleaseFilter.h  ExecutorFilter.h  ExpiringFilter.h  ServerDispatcher.h  Service.h  ServiceTest.cpp
wangle/ssl/: BUCK  CMakeLists.txt  ClientHelloExtStats.h  DHParam.h  FizzFallbackState.cpp  PasswordInFile.cpp  PasswordInFile.h  PasswordInFileFactory.cpp  PasswordInFileFactory.h  SSLCacheOptions.h  SSLCacheProvider.h  SSLContextConfig.h  SSLContextManager.cpp  SSLContextManager.h  SSLSessionCacheManager.cpp  SSLSessionCacheManager.h  SSLStats.h  SSLUtil.cpp  SSLUtil.h  ServerSSLContext.cpp  ServerSSLContext.h  TLSCredProcessor.cpp  TLSCredProcessor.h  TLSInMemoryTicketProcessor.h  TLSTicketKeyManager.cpp  TLSTicketKeyManager.h  TLSTicketKeySeeds.h
wangle/test/: TestMain.cpp
wangle/util/: BUCK  CMakeLists.txt  FilePoller.cpp  FilePoller.h  MultiFilePoller.cpp  MultiFilePoller.h
(+53 files in other folders)
